Amarok ChangeLog
================
(C) 2002-2010 the Amarok authors.


VERSION 2.2.3
  FEATURES:
    * Dynamic Collection is back. (BR 171213)
    * Searching covers from Last.fm using custom query in interactive mode.
 
  CHANGES:
    * Improved cover fetching accuracy and speed.
    * Usability: Better design of playback configuration dialog.
    * Use millisecond accuracy for track bookmarks. Backwards compatible
      with bookmarks stored in previos versions (BR 215145)
    * Bumped libMTP dependency to version 1.0.0.
    * Loving a track for Last.fm via the global keyboard action also show a
      message in the status bar.
    * Improved usability of the playlist layout editor dialog.
    * Duplicate unique file identifiers are now indicated in debug output,
      along with the paths of the files, when found instead of being silently
      ignored. This can help discover multiple copies of the same file or
      files which incorrectly have the same MusicBrainz unique identifier.

  BUGFIXES:
    * Fixed playlist layout editor blocking control of Amarok. (BR 220825)
    * Fixed moodbar in progress slider not correctly updating after moodbar
      style change (BR 220695)
    * Fixed progress slider not moving for many streams (and possible other
      types of tracks) (BR 221747)
    * Sort artists named like "The Foo" correctly in all cases. (BR 176670)
    * Fixed behaviour when clearing the bookmark manager filter.
    * Fixed track not being added to the playlist when playing a track from
      the bookmark manager.


VERSION 2.2.2
  CHANGES:
    * The inline playlist editor now also allows resizing of auto sized items that 
      are invisible because fixed sized items already use up 100% width.
    * Enhanced the playlist sorting breadcrumb items to separately highlight
      the order inversion arrow on hover. (BR 209011)
    * The automatic character set detection for tags has been disabled; it